--- a/app/src/main/res/menu/top_menu_bar.xml
+++ b/app/src/main/res/menu/top_menu_bar.xml
@@ -22,9 +22,9 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/menu_favorites"
+        android:id="@+id/menu_myPlaces"
         android:icon="@drawable/ic_favorite_full"
-        android:title="@string/Favorites"
+        android:title="@string/MyPlaces"
         app:showAsAction="always" />
 
 
