--- a/app/src/main/res/layout/list_question.xml
+++ b/app/src/main/res/layout/list_question.xml
@@ -29,21 +29,23 @@
             android:maxLines="2"
             android:minLines="2"
             android:text=""
-            android:textColor="@color/mainGreen"
-            android:textSize="18sp" />
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="25sp" />
 
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/question_LBL_qa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/question_LBL_qaNumber"
+            android:layout_alignBottom="@+id/question_LBL_qaNumber"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_toEndOf="@id/question_LBL_qaNumber"
             android:ellipsize="end"
             android:gravity="bottom"
-            android:maxLines="2"
+            android:maxLines="3"
             android:minLines="2"
             android:text="@string/question"
             android:textColor="@color/mainGreen"
