--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -215,101 +215,101 @@
                 android:background="@color/mainGreen" />
 
 
-            <LinearLayout
-                android:id="@+id/Profile_YearBirth"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingStart="15dp"
-                android:paddingEnd="15dp">
+<!--            <LinearLayout-->
+<!--                android:id="@+id/Profile_YearBirth"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="20dp"-->
+<!--                android:gravity="center_vertical"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:paddingStart="15dp"-->
+<!--                android:paddingEnd="15dp">-->
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_calender"
-                    app:tint="@color/mainGreen" />
+<!--                <ImageView-->
+<!--                    android:layout_width="30dp"-->
+<!--                    android:layout_height="30dp"-->
+<!--                    android:src="@drawable/ic_calender"-->
+<!--                    app:tint="@color/mainGreen" />-->
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/roboto"
-                    android:text="@string/yearBirth"
-                    android:textColor="@color/mainGreen"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+<!--                <com.google.android.material.textview.MaterialTextView-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginStart="5dp"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:fontFamily="@font/roboto"-->
+<!--                    android:text="@string/yearBirth"-->
+<!--                    android:textColor="@color/mainGreen"-->
+<!--                    android:textSize="18sp"-->
+<!--                    android:textStyle="bold" />-->
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/Profile_LBL_UserYearBirth"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/roboto"
-                    android:text="@string/userYearBirth"
-                    android:textColor="@color/menuGreen"
-                    android:textSize="18sp" />
+<!--                <com.google.android.material.textview.MaterialTextView-->
+<!--                    android:id="@+id/Profile_LBL_UserYearBirth"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:fontFamily="@font/roboto"-->
+<!--                    android:text="@string/userYearBirth"-->
+<!--                    android:textColor="@color/menuGreen"-->
+<!--                    android:textSize="18sp" />-->
 
-            </LinearLayout>
-
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="15dp"
-                android:background="@color/mainGreen" />
+<!--            </LinearLayout>-->
 
 
-            <LinearLayout
-                android:id="@+id/Profile_Gender"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingStart="15dp"
-                android:paddingEnd="15dp">
+<!--            <View-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="1dp"-->
+<!--                android:layout_marginStart="15dp"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:layout_marginEnd="15dp"-->
+<!--                android:background="@color/mainGreen" />-->
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_gender"
-                    app:tint="@color/mainGreen"/>
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/roboto"
-                    android:text="@string/gender"
-                    android:textColor="@color/mainGreen"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+<!--            <LinearLayout-->
+<!--                android:id="@+id/Profile_Gender"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="20dp"-->
+<!--                android:gravity="center_vertical"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:paddingStart="15dp"-->
+<!--                android:paddingEnd="15dp">-->
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/Profile_LBL_UserGender"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/roboto"
-                    android:text="@string/userGender"
-                    android:textColor="@color/menuGreen"
-                    android:textSize="18sp" />
+<!--                <ImageView-->
+<!--                    android:layout_width="30dp"-->
+<!--                    android:layout_height="30dp"-->
+<!--                    android:src="@drawable/ic_gender"-->
+<!--                    app:tint="@color/mainGreen"/>-->
 
-            </LinearLayout>
+<!--                <com.google.android.material.textview.MaterialTextView-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginStart="5dp"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:fontFamily="@font/roboto"-->
+<!--                    android:text="@string/gender"-->
+<!--                    android:textColor="@color/mainGreen"-->
+<!--                    android:textSize="18sp"-->
+<!--                    android:textStyle="bold" />-->
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="15dp"
-                android:background="@color/mainGreen" />
+<!--                <com.google.android.material.textview.MaterialTextView-->
+<!--                    android:id="@+id/Profile_LBL_UserGender"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:fontFamily="@font/roboto"-->
+<!--                    android:text="@string/userGender"-->
+<!--                    android:textColor="@color/menuGreen"-->
+<!--                    android:textSize="18sp" />-->
+
+<!--            </LinearLayout>-->
+
+<!--            <View-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="1dp"-->
+<!--                android:layout_marginStart="15dp"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:layout_marginEnd="15dp"-->
+<!--                android:background="@color/mainGreen" />-->
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/Profile_BTN_EditProfile"
