--- a/app/src/main/res/layout/activity_create_new_trip.xml
+++ b/app/src/main/res/layout/activity_create_new_trip.xml
@@ -57,24 +57,58 @@
             android:orientation="vertical">
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/createTrip_TIN_destination"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
-            android:hint="@string/destination"
-            android:padding="5dp"
-            android:textColor="@color/black"
-            android:textColorHint="@color/menuGreen"
-            app:boxBackgroundColor="@color/white">
-
-            <com.google.android.material.textfield.TextInputEditText
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:id="@+id/createTrip_TIN_destination"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginEnd="32dp"
+                android:outlineAmbientShadowColor="@color/mainGreen"
+                android:outlineSpotShadowColor="@color/mainGreen"
+                android:padding="5dp"
+                android:textColorHint="@color/menuGreen"
+                app:boxStrokeColor="@color/menuGreen"
+                app:boxStrokeWidth="2dp"
+                app:hintTextColor="@color/menuGreen"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:startIconDrawable="@drawable/ic_location"
+                app:startIconTint="@color/menuGreen">
 
-        </com.google.android.material.textfield.TextInputLayout>
+
+                <AutoCompleteTextView
+                    android:id="@+id/createTrip_AutoCompleteTextViewDestination"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/roboto"
+                    android:inputType="none"
+                    android:text="@string/destination"
+                    android:textColor="@color/menuGreen" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:id="@+id/createTrip_TIN_destination"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:layout_marginStart="32dp"-->
+<!--            android:layout_marginEnd="32dp"-->
+<!--            android:hint="@string/destination"-->
+<!--            android:padding="5dp"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textColorHint="@color/menuGreen"-->
+<!--            app:boxBackgroundColor="@color/white">-->
+
+<!--            <com.google.android.material.textfield.TextInputEditText-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content" />-->
+
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
 
         <LinearLayout
             android:id="@+id/CreateTrip_dateLayout"
