--- a/app/src/main/res/layout/activity_my_places.xml
+++ b/app/src/main/res/layout/activity_my_places.xml
@@ -6,20 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".Activities.MyPlacesActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@color/mainGreen"
+        app:liftOnScroll="true"
+        >
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/MyPlaces_toolBar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/mainGreen"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
+            app:navigationIcon="@drawable/ic_arrow_back"
+            app:navigationIconTint="@color/white"
+            app:title= "@string/MyPlaces"
+            app:titleTextColor="@color/white"
+            />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <ImageView
         android:id="@+id/myPlaces_IMG_Icon"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="?actionBarSize"
         android:src="@drawable/ic_logo" />
 
-    <fragment android:id="@+id/myPlaces_autocomplete_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/myPlaces_IMG_Icon"
-        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-        />
+
+
+
 
 <!--    <EditText-->
 <!--        android:id="@+id/myPlaces_Address"-->
@@ -35,7 +53,7 @@
         android:id="@+id/myPlaces_RecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/myPlaces_autocomplete_fragment"
+        android:layout_below="@+id/myPlaces_IMG_Icon"
         android:layout_marginBottom="0dp"
         android:clipToPadding="false"
         android:paddingBottom="75dp"
